# massive-email-receiver

./: Dockerfile  README.md  main.py  pyproject.toml
config/: config.yml  parameters.yml
kubernetes/: README.md  deployment.yml
massive_mail_receiver_bundle/: __init__.py  bundle.py  mail.py
