[tool.poetry]
name = "massive-email-receiver"
version = "0.1.0"
description = ""
authors = ["Alvaro Garcia <maxpowel@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
motor-bundle = "^2.0.0"
aiosmtpd = {git = "https://github.com/aio-libs/aiosmtpd.git"}
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
